--- a/style.css
+++ b/style.css
@@ -21,6 +21,7 @@ body {
     border-radius: 15px;
     width: 90%;
     max-width: 400px;
+    min-width: 300px;
     margin: 0 auto;
     height: fit-content;
     overflow: hidden;
@@ -30,8 +31,10 @@ body {
 
 #display {
     width: 100%;
+    min-height: 80px;
+    height: auto;
     margin: 0 auto;
-    padding: 35px;
+    padding: 20px 35px;
     font-size: 3rem;
     text-align: right;
     border: none;
@@ -49,6 +52,7 @@ body {
 button {
     width: 100%;
     height: 50px;
+    aspect-ratio: 1; 
     border-radius: 10px;
     border: none;
     background-color: var(--button-bg-color);
@@ -57,6 +61,7 @@ button {
     font-weight: bold;
     box-shadow: -8px -8px 15px rgb(0, 0, 30);
     cursor: pointer;
+    transition: background-color 0.2s ease;
 }
 
 button:hover {
@@ -68,7 +73,8 @@ button:active {
 }
 
 button:focus {
-    outline: 2px solid var(--button-active-color);
+    outline: none;
+    box-shadow: 0 0 0 3px var(--button-active-color);
 }
 
 @media screen and (max-width: 500px) {
@@ -84,5 +90,17 @@ button:focus {
     button {
         height: 40px;
         font-size: 1.2rem;
+    }
+}
+
+@media screen and (max-width: 400px) {
+    #display {
+        font-size: 1.5rem;
+        padding: 15px;
+    }
+
+    button {
+        height: 35px;
+        font-size: 1rem;
     }
 }
